--- a/new/index.html
+++ b/new/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>RPG</title>
 
+    <script src="js/utilities.js"></script>
     <script src="js/enums.js"></script>
     <script src="js/Satchel.js"></script>
     <script src="js/map.js"></script>
