This is a bit broken

--- a/new/index.html
+++ b/new/index.html
@@ -20,7 +20,8 @@
   </head>
 
   <body onload="initialize()">
-    <canvas id="c" width="400" height="400"></canvas>
+    <canvas id="c" width="640" height="640"></canvas>
     <canvas id="minimap" width="400" height="400"></canvas>
+    <div id="test"></div>
   </body>
 </html>
