--- a/new/index.html
+++ b/new/index.html
@@ -15,6 +15,8 @@
       var initialize = function() {
         var game = new Game();
         game.initialize();
+
+        var mostUseful = new Array(new Array(new Array(new Array(new Array()))));
       };
     </script>
   </head>
